Fixes on mobile headers and links

--- a/client_new/css/app.css
+++ b/client_new/css/app.css
@@ -18,6 +18,12 @@ body {
 /* Top bar
    ========================================================================== */
 
+@media screen and (max-width: 767px) {
+    header {
+        height: 5rem;
+    }
+}
+
 #top-bar {
     position: static;
     top: inherit;
@@ -65,7 +71,6 @@ body {
 
 #top-bar .nav-item a {
     line-height: 40px;
-
     color: black;
     font-size: 20px;
 }
@@ -75,6 +80,8 @@ body {
 		position: absolute;
 		top: 40px;
 		right: 0;
+		left: 0;
+		text-align: center;
 		margin-right: 0;
 	} 	
 
